# ZED_ROS2_Wrapper

object_detection/: CMakeLists.txt  package.xml
object_detection/include/: GPSDReader.hpp  IGNSSReader.h  utils.h
object_detection/launch/: object_detection_launch.py
object_detection/params/: config.yaml
object_detection/src/: GPSDReader.cpp  main.cpp  yolo.cpp
rover_msgs/: CMakeLists.txt  package.xml
rover_msgs/msg/: FiducialData.msg  ObjectDetection.msg  RoverStateSingleton.msg
