<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_detection</name>
  <version>0.2.0</version>
  <description>ZED SDK interface to use custom object detection model.</description>
  <maintainer email="bjz-github@spwiz.com">bradenmeyers</maintainer>
  <license>Apache-2.0</license>
  <author email="phin@zayda.net">Phineas Jensen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rover_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <build_depend>tensorrt</build_depend>
  <exec_depend>tensorrt</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
